# vivo-sim

./: .gitignore  LICENSE  README.md
backend/: EXECUTION_GUIDE.md  conftest.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router.py  routes.py
backend/app/config/: __init__.py  crisis_constants.py  math_constants.py
backend/app/core/: config.py
backend/app/engines/: __init__.py  airport_disruption_engine.py  airport_engine.py  branching_engine.py  confidence_engine.py  crisis_risk_engine.py  decision_engine.py  decision_intelligence_engine.py  ecommerce_disruption_engine.py  executive_narrative_engine.py  fuel_transmission_engine.py  intervention_engine.py  market_engine.py  propagation_engine.py  propagation_engine_v2.py  propagation_engine_v3.py  risk_engine.py  risk_engine_v2.py  sector_engine.py  strategy_engine.py  uncertainty_engine.py
backend/app/models/: agent.py  entity.py  graph.py  scenario.py  simulation.py
backend/app/scenarios/: __init__.py  airport_nodes_gcc.py  gcc_airport_nodes.py  scenario_coefficients.py  strategic_nodes_gcc.py  us_iran_gcc_pack.py
backend/app/schemas/: __init__.py  agent.py  analysis.py  branched_requests.py  branching.py  brief.py  chat.py  common.py  crisis_common.py  crisis_outputs.py  crisis_scenarios.py  decision.py  decision_intelligence.py  entity.py  graph.py  intervention.py  propagation.py  scenario.py  scenarios.py  signal.py  simulation.py  uncertainty.py
backend/tests/: test_api.py  test_api_flow.py  test_end_to_end_flow.py  test_engines.py
frontend/: .env.example  (+6 more)
(+190 files in other folders)
